# cpp

./: .gitignore
Oving 1/: CMakeLists.txt  a.cpp  b.cpp
Oving 2/: CMakeLists.txt  task1.cpp  task4.cpp  task5.cpp  task6.cpp
Oving 3/: CMakeLists.txt  Circle.cpp  Circle.h  Circle.hpp  CircleClient.cpp  Commodity.cpp  Commodity.h  Commodity.hpp  CommodityClient.cpp  Streng.cpp  main.cpp
Oving 4/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task2.h  main.cpp
Oving 5/: CMakeLists.txt  main.cpp
Oving 6/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessBoardPrint.cpp  Server.cpp
Oving 7/: CMakeLists.txt  Fraction.cpp  Fraction.h  Set.cpp  Set.h  main.cpp
Oving 7/set/: Set.cpp  main.cpp
Oving 8/: CMakeLists.txt  equal_functions.cpp  pair_template.cpp
